--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -68,7 +68,8 @@
                                                 id="ruleType"
                                                 :label="$tc('sw-settings-rule.detail.labelType')"
                                                 :store="moduleTypeStore"
-                                                v-model="moduleTypes">
+                                                v-model="moduleTypes"
+                                                displayName="label">
                             </sw-condition-value>
                         {% endblock %}
                     </sw-card>
