NTR - Fix sw-url-input icon styling

--- a/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.scss
+++ b/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.scss
@@ -3,9 +3,16 @@ $sw-field-color-secure: $color-emerald;
 
 .sw-field {
     .sw-field__url-input__prefix {
+        display: inline-flex;
         cursor: pointer;
+        user-select: none;
+
         &.is--ssl {
             color: $sw-field-color-secure;
+        }
+
+        .sw-icon {
+            margin-right: 4px;
         }
     }
 }
