--- a/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document.card.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document.card.scss
@@ -8,6 +8,7 @@
 .sw-order-document-card {
 
     .sw-card__content {
+        height: 300px;
         margin-bottom: 150px; //fix until context menu recognizes bottom of page
     }
 }
