--- a/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
+++ b/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
@@ -32,8 +32,7 @@
     }
 
     &.is--inherited {
-        .sw-field__label,
-        .sw-field__button-restore {
+        .sw-field__label {
             color: $color-purple;
         }
     }
