NEXT-3044 - Fix admin menu active status for new menu categories

--- a/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
@@ -3,8 +3,7 @@
         :class="getItemName(entry.id || entry.path)"
         @click="$emit('menuItemClicked', entry, $event.currentTarget)"
         @mouseover="$emit('menuItemHovered', entry, $event.currentTarget, parentEntries)"
-        @mouseleave="$emit('menuItemLeaved', entry, $event.currentTarget, parentEntries)"
-    >
+        @mouseleave="$emit('menuItemLeaved', entry, $event.currentTarget, parentEntries)">
 
         {% block sw_admin_menu_item_router_link %}
             <router-link v-if="entry.path"
@@ -54,7 +53,9 @@
         {% endblock %}
 
         {% block sw_admin_menu_item_navigation_link %}
-            <span v-else class="sw-admin-menu__navigation-link">
+            <span class="sw-admin-menu__navigation-link"
+                  :class="{ 'router-link-active': subIsActive(entry.id) }"
+                  v-else>
 
                 {% block sw_admin_menu_item_icon %}
                     <sw-icon v-if="displayIcon"
