--- a/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
+++ b/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
@@ -1,17 +1,27 @@
 @import "~scss/variables";
 
-$sw-simple-search-field-search-icon-color: $color-gutenberg;
+$sw-simple-search-field-search-icon-color: $color-gray;
 
 .sw-simple-search-field {
     position: relative;
     margin-bottom: 8px;
+    outline: none;
 
     .sw-simple-search-field__input {
         margin-bottom: 0;
 
+        &.sw-block-field .sw-block-field__block,
+        &.sw-block-field.has--focus .sw-block-field__block {
+            border: none;
+            box-shadow: none;
+        }
+
         input {
+            background: $color-light-gray;
+            border-radius: 30px;
             padding-right: 44px;
             padding-left: 20px;
+            padding: 9px 16px;
         }
     }
 
