NEXT-3003 - bugfixing several JS errors and styling fixes

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -6,6 +6,7 @@
                 {% block sw_customer_base_form_first_salutation_field %}
                     <sw-select-field :label="$tc('sw-customer.baseForm.labelSalutation')"
                                      v-model="customer.salutationId"
+                                     :placeholder="$tc('sw-customer.baseForm.placeholderSalutation')"
                                      validation="required">
                         <option v-for="salutation in salutations" :key="salutation.id" :value="salutation.id">
                             {{ salutation.translated.displayName }}
