--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.scss
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.scss
@@ -19,7 +19,7 @@ $sw-grid-table-row-color-background:      $color-white;
     display: grid;
     overflow: hidden;
     position: relative;
-    grid-template-rows: 100%;
+    grid-template-rows: auto;
     border: 1px solid $sw-grid-item-color-border;
 
     .sw-card & {
