NEXT-3091 - Rename label property in tag component

--- a/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
@@ -5,7 +5,7 @@
                 <sw-select :id="entity.id"
                            multi
                            ref="swTagSelect"
-                           :label="label ? $tc('global.sw-tag-field.title') : ''"
+                           :label="showLabel ? $tc('global.sw-tag-field.title') : ''"
                            :placeholder="disabled ? null : $tc('global.sw-tag-field.placeholder')"
                            :associationStore="associationStore"
                            :store="tagStore"
