--- a/Resources/administration/src/module/sw-customer/component/sw-customer-card/sw-customer-card.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-card/sw-customer-card.html.twig
@@ -99,7 +99,7 @@
                                         {% block sw_customer_card_metadata_customer_tag %}
                                             <sw-tag-field :entity="customer"
                                                           :disabled="!editMode"
-                                                          :label="editMode ? true : false">
+                                                          :showLabel="editMode ? true : false">
                                             </sw-tag-field>
                                         {% endblock %}
 
