--- a/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -40,7 +40,7 @@
                                     <sw-tag-field size="small"
                                                   :entity="currentOrder"
                                                   :disabled="!isEditing"
-                                                  :label="false"
+                                                  :showLabel="false"
                                                   @input="emitChange">
                                     </sw-tag-field>
                                 {% endblock %}
