NTR - Fix modal height

--- a/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.scss
+++ b/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.scss
@@ -31,7 +31,7 @@ $sw-media-modal-non-grid-margin: 0 24px;
         }
     }
 
-    .sw-tabs .sw-tabs__custom-Content {
+    .sw-tabs .sw-tabs__custom-content {
         height: 100%;
     }
 
