--- a/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
+++ b/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
@@ -2,7 +2,8 @@
     <component v-bind:is="componentName"
                v-bind="bind"
                ref="component"
-               v-model="currentValue">
+               v-model="currentValue"
+               class="sw-form-field-renderer">
         {% block sw_form_field_renderer_inner %}
             <slot>{% block sw_form_field_renderer_inner_slot %}{% endblock %}</slot>
         {% endblock %}
