--- a/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-detail/sw-settings-document-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-detail/sw-settings-document-detail.html.twig
@@ -46,7 +46,7 @@
                                     </sw-field>
                                 </div>
                             {% endblock %}
-                            {% block sw_configuration_option_list_grid_column_media %}
+                            {% block sw_settings_document_detail_content_field_media %}
                                 <div flex="250px" align="stretch"  class="media-column">
                                     <sw-media-field v-model="documentConfig.logoId"
                                                     :label="$tc('sw-settings-document.detail.labelOptionMedia')">
@@ -69,10 +69,10 @@
                                 </sw-field>
                             </div>
                             {% endblock %}
-                            {% block sw_custom_field_set_renderer_card_tabs_content %}
+                            {% block sw_settings_document_detail_content_form_field_renderer_content %}
                                 <template v-if="documentConfig.config">
-                                    <template v-for="formField in formFieldSet.formFields">
-                                        {% block sw_custom_field_set_renderer_card_form_renderer %}
+                                    <template v-for="formField in generalFormFields">
+                                        {% block sw_settings_document_detail_content_form_field_renderer %}
                                             <sw-form-field-renderer
                                                 v-bind="formField"
                                                 v-model="documentConfig.config[formField.name]">
@@ -84,6 +84,26 @@
                         </sw-container>
                     </sw-card>
                 {% endblock %}
+
+                {% block sw_settings_document_detail_company_card %}
+                    <sw-card :title="$tc('sw-settings-document.detail.companyCard')">
+                        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
+                            {% block sw_settings_document_detail_company_form_field_renderer_content %}
+                                <template v-if="documentConfig.config">
+                                    <template v-for="formField in companyFormFields">
+                                        {% block sw_settings_document_detail_company_form_field_renderer %}
+                                            <sw-form-field-renderer
+                                                    v-bind="formField"
+                                                    v-model="documentConfig.config[formField.name]">
+                                            </sw-form-field-renderer>
+                                        {% endblock %}
+                                    </template>
+                                </template>
+                            {% endblock %}
+                        </sw-container>
+                    </sw-card>
+                {% endblock %}
+
                 {% block sw_settings_document_detail_assignment_card %}
                     <sw-card :title="$tc('sw-settings-document.detail.assignmentCard')">
                         <sw-container columns="repeat(auto-fit, minmax(100%, 1fr)" gap="0px 30px">
