NEXT-3106 - Fix creation of numbers ranges in the administration

--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -79,7 +79,8 @@
                                           @change="onChange()"
                                           :label="$tc('sw-settings-number-range.detail.labelStart')"
                                           :placeholder="$tc('sw-settings-number-range.detail.placeholderStart')"
-                                          v-model="numberRange.start">
+                                          v-model="numberRange.start"
+                                          validation="required">
                                 </sw-field>
                             {% endblock %}
 
