NEXT-3075 - add property assignment empty state

--- a/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
+++ b/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
@@ -28,6 +28,12 @@
                         {% endblock %}
                     </template>
                 {% endblock %}
+
+                {% block sw_property_assignment_empty_state %}
+                    <template slot="empty">
+                            <sw-empty-state v-if="!isLoading" :title="$tc('sw-property-assignment.messageEmptyTitle')" :subline="$tc('sw-property-assignment.messageEmptySubline')"></sw-empty-state>
+                    </template>
+                {% endblock %}
             </sw-grid>
         {% endblock %}
     </div>
