NEXT-2842 - add drag and drop for product media

--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -54,7 +54,10 @@
                 {% endblock %}
 
                 {% block sw_media_upload_regular_drop_zone %}
-                    <div class="sw-media-upload__dropzone" ref="dropzone" :class="isDragActiveClass">
+                    <div class="sw-media-upload__dropzone"
+                         ref="dropzone"
+                         v-droppable="{ dragGroup: 'media', onDrop: onDropMedia }"
+                         :class="isDragActiveClass">
 
                         {% block sw_media_upload_preview %}
                             <template v-if="showPreview">
