--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -92,6 +92,7 @@
                                  :taxes="taxes"
                                  :customFieldSets="customFieldSets"
                                  :currencies="currencies"
+                                 @media-dropped="onAddItemToProduct"
                                  @calculating="updatePriceIsCalculating">
                     </router-view>
                 {% endblock %}
