--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -8,16 +8,17 @@
         {% block sw_sidebar_media_item_content %}
             <div class="sw-sidebar-media-item__content">
                 {% block sw_sidebar_media_item_search_field %}
-                    <sw-simple-search-field v-model="term"></sw-simple-search-field>
+                    <sw-simple-search-field v-model="term" :class="{ 'is--searching': term.length }"></sw-simple-search-field>
                 {% endblock %}
 
                 {% block sw_sidebar_media_item_folder_navigation%}
-                    <sw-media-breadcrumbs v-model="mediaFolderId" small></sw-media-breadcrumbs>
+                    <sw-media-breadcrumbs v-model="mediaFolderId" v-if="!term.length" small></sw-media-breadcrumbs>
                 {% endblock %}
 
                 {% block sw_sidebar_media_item_media_item_list %}
                     {% block sw_sidebar_media_item_media_item_list_folder_item %}
                         <sw-media-folder-item
+                            v-if="!term.length"
                             v-for="folder in subFolders"
                             :key="folder.id"
                             :item="folder"
