--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.scss
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.scss
@@ -6,4 +6,8 @@
     .sw-sidebar-media-item__load-more-button {
         margin-bottom: 10px;
     }
+
+    .sw-simple-search-field.is--searching {
+        margin-bottom: 12px;
+    }
 }
