NEXT-2842 - add drag and drop for manufacturers and categories

--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -35,6 +35,7 @@
                 :cmsPage="cmsPage"
                 :mediaItem="mediaItem"
                 :isLoading="isLoading"
+                @media-dropped="$emit('media-dropped', $event)"
                 @sw-category-base-on-layout-change="onCmsLayoutChange"
                 @sw-category-base-on-open-sidebar="openSidebar"
                 @sw-category-base-on-set-media="setMediaItem"
