--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -78,6 +78,7 @@
                         :cmsPage="cmsPage"
                         :mediaItem="mediaItem"
                         :isLoading="isLoading"
+                        @media-dropped="onDropMedia"
                         @sw-category-view-on-page-change="getAssignedCmsPage"
                         @sw-category-view-on-open-sidebar="openSidebar"
                         @sw-category-view-on-set-media="setMediaItem"
